﻿2006-12-12  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* tools/Purger.java: Removed purger tool.

2006-12-25  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* data/graphics/tiles/christmastree.png, data/maps/new_11-1.tmx.gz:
	Added Christmas tree by Pauan.
	* data/graphics/sprites/head-christmastree.xml: Fixed name of image.
	* src/resources/spriteset.cpp: Fixed index check to prevent crashing.
	* data/graphics/sprites/head-christmastreehat.png,
	data/graphics/sprites/head-rangerhat.png,
	data/graphics/sprites/head-christmastree.xml,
	data/graphics/sprites/head-antlerhat.xml,
	data/graphics/sprites/head-santabeardhat.xml,
	data/graphics/sprites/head-santabeardhat.png,
	data/graphics/sprites/head-rangerhat.xml: Updates to Pauan's recent
	sprites by Pauan.
	* data/items.xml: Fixes to descriptions and weights by Pauan.

2006-12-24  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/shoplistbox.cpp: Don't try to draw an icon when it is not
	defined or failed to load properly.
	* src/resources/image.cpp: Major rendering performance increase in
	software mode, by not using RLE compression on loaded images while
	most of the time, we're only drawing a small subimage of them.
	* README, data/help/header.txt, NEWS: Filled in release dates.

2006-12-23  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* configure.ac, data/graphics/items/Makefile.am,
	data/graphics/items/CMakeLists.txt, data/graphics/images/Makefile.am,
	data/graphics/images/CMakeLists.txt,
	data/graphics/sprites/Makefile.am,
	data/graphics/sprites/CMakeLists.txt, data/graphics/Makefile.am,
	data/graphics/CMakeLists.txt, data/maps/Makefile.am,
	data/maps/CMakeLists.txt, data/sfx/Makefile.am,
	data/sfx/CMakeLists.txt, data/Makefile.am, data/CMakeLists.txt:
	Removed database files, minimaps, items, monster sprites, maps and
	sounds from the release. They will be released dynamically only.
	* data/graphics/tiles/snow_x3.png: Added bottom of Christmas tree by
	pauan.