@@ -36,6 +36,19 @@ INCLUDE_DIRECTORIES(
     ${GUICHAN_INCLUDE_DIR}
     )
 
+# Fix some stuff that gets not hidden by mainline modules
+MARK_AS_ADVANCED(PHYSFS_INCLUDE_DIR)
+MARK_AS_ADVANCED(PHYSFS_LIBRARY)
+MARK_AS_ADVANCED(SDLIMAGE_INCLUDE_DIR)
+MARK_AS_ADVANCED(SDLIMAGE_LIBRARY)
+MARK_AS_ADVANCED(SDLMAIN_LIBRARY)
+MARK_AS_ADVANCED(SDLMIXER_INCLUDE_DIR)
+MARK_AS_ADVANCED(SDLMIXER_LIBRARY)
+MARK_AS_ADVANCED(SDLNET_INCLUDE_DIR)
+MARK_AS_ADVANCED(SDLNET_LIBRARY)
+MARK_AS_ADVANCED(SDL_INCLUDE_DIR)
+MARK_AS_ADVANCED(SDL_LIBRARY)
+
 SET(SRCS
     gui/browserbox.cpp
     gui/browserbox.h
