@@ -1,4 +1,9 @@
-﻿2006-12-12  Eugenio Favalli  <elvenprogrammer@gmail.com>
+﻿2007-01-05  Björn Steinbrink  <B.Steinbrink@gmx.de>
+
+	* src/CMakeLists.txt, data/graphics/images/ambient/Makefile.am,
+	data/graphics/sprites/CMakeLists.txt: Synchronized build files.
+
+2006-12-12  Eugenio Favalli  <elvenprogrammer@gmail.com>
 
 	* tools/Purger.java: Removed purger tool.
 
